--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -1900,14 +1900,14 @@
         android:description="@string/permdesc_bindAccessibilityService"
         android:protectionLevel="signature" />
 
-    <!-- Must be required by an {@link android.printservice.PrintService},
+    <!-- Must be required by a {@link android.printservice.PrintService},
          to ensure that only the system can bind to it. -->
     <permission android:name="android.permission.BIND_PRINT_SERVICE"
         android:label="@string/permlab_bindPrintService"
         android:description="@string/permdesc_bindPrintService"
         android:protectionLevel="signature" />
 
-    <!-- Must be required by an {@link android.nfc.cardemulation.HostApduService}
+    <!-- Must be required by a {@link android.nfc.cardemulation.HostApduService}
          or {@link android.nfc.cardemulation.OffHostApduService} to ensure that only
          the system can bind to it. -->
     <permission android:name="android.permission.BIND_NFC_SERVICE"
@@ -1931,7 +1931,7 @@
         android:description="@string/permdesc_bindTextService"
         android:protectionLevel="signature" />
 
-    <!-- Must be required by an {@link android.net.VpnService},
+    <!-- Must be required by a {@link android.net.VpnService},
          to ensure that only the system can bind to it. -->
     <permission android:name="android.permission.BIND_VPN_SERVICE"
         android:label="@string/permlab_bindVpnService"
@@ -1953,7 +1953,7 @@
         android:protectionLevel="signature" />
 
     <!-- Required to add or remove another application as a device admin.
-         <p/>Not for use by third-party apps. -->
+         <p/>Not for use by third-party applications. -->
     <permission android:name="android.permission.MANAGE_DEVICE_ADMINS"
         android:label="@string/permlab_manageDeviceAdmins"
         android:description="@string/permdesc_manageDeviceAdmins"
