Remove system user id for cm tests
Change-Id: I51f500c8e7b4e2963093e20c6f20bcfe020995c9
(cherry picked from commit 575495c29007503566e28004bf60018a824b1f1b)

--- a/core/tests/ConnectivityManagerTest/AndroidManifest.xml
+++ b/core/tests/ConnectivityManagerTest/AndroidManifest.xml
@@ -16,8 +16,7 @@
 
 <!-- package name must be unique so suffix with "tests" so package loader doesn't ignore us -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.android.connectivitymanagertest"
-  android:sharedUserId="android.uid.system">
+  package="com.android.connectivitymanagertest">
 
     <!-- We add an application tag here just so that we can indicate that
          this package needs to link against the android.test library,
